--- a/usuario/index.html
+++ b/usuario/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="utf-8">
   <title>Usuario</title>
-  <base href="/usuario">
+  <base href="/Usuario/">
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <link rel="stylesheet" href="styles.2c269698f166f03e546f.css"></head>
@@ -14,5 +15,5 @@
             </div>
     </div>
   <app-root></app-root>
-<script src="runtime.ee0aae13fb762b150814.js" defer></script><script src="polyfills-es5.cd0da05b34ec836da12d.js" nomodule defer></script><script src="polyfills.5d6b1f4297628213292a.js" defer></script><script src="scripts.f7002204edd88ba29052.js" defer></script><script src="main.84cddf2b8a29d01a3548.js" defer></script></body>
+<script src="runtime.ee0aae13fb762b150814.js" defer></script><script src="polyfills-es5.cd0da05b34ec836da12d.js" nomodule defer></script><script src="polyfills.5d6b1f4297628213292a.js" defer></script><script src="scripts.f7002204edd88ba29052.js" defer></script><script src="main.44af9f1b5a2540323950.js" defer></script></body>
 </html>
